Revert "Adding an extra div in SubmissionGridRow component: It now has a separate div for Details button in order to fix misalignment issue. A new class for it is added in the scss file."
This reverts commit 06c60da011e9c003bbcf86ff79ab7cd756e09ddc.

--- a/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/submission-grid-row/SubmissionGridRow.module.scss
+++ b/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/submission-grid-row/SubmissionGridRow.module.scss
@@ -36,10 +36,6 @@
     gap: 10px;
   }
 
-  .detailsButtonContainer {
-    flex: 1 0 6vw;
-  }
-
   .dateAndUsernameContainer {
     display: flex;
     gap: 5px;
